--- a/src/popups/popup-presents.html
+++ b/src/popups/popup-presents.html
@@ -1,10 +1,10 @@
 <div class="mfp-popup popup-presents">
   <div class="mfp-popup-inner">
     <div class="mfp-popup-title popup-presents-title">
-      Список призов
+      ВЫ можете выиграть
     </div>
     <div class="popup-text">
-      Можно написать какие призы могут ждать победители людей.
+      Каждый победитель получит набор, состоящий из случайной комбинаций ярких и полезных призов от Белого Медведя.
     </div>
     <div class="presents-cards">
       <div class="presents-cards-wrapper">
@@ -22,7 +22,10 @@
               </div>
               <div class="presents-card-info__title">
                 ПРОГУЛКА НА ЯХТЕ + подарочный
-                набор от «Белого Медведя»
+                набор от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -37,7 +40,10 @@
               </div>
               <div class="presents-card-info__title">
                 СПЛАВ НА БАЙДАРКАХ + подарочный
-                набор от «Белого Медведя»
+                набор от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -52,7 +58,10 @@
               </div>
               <div class="presents-card-info__title">
                 Подарочный набор
-                от «Белого Медведя»
+                от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -73,7 +82,10 @@
                 За 1 место
               </div>
               <div class="presents-card-info__title">
-                ДЖИП-ТРИП Medium trip + подарочный набор от «Белого Медведя»
+                ДЖИП-ТРИП Medium trip + подарочный набор от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -88,7 +100,10 @@
               </div>
               <div class="presents-card-info__title">
                 ОБУЧЕНИЕ И КАТАНИЕ НА SUP-БОРДАХ
-                + подарочный набор от «Белого Медведя»
+                + подарочный набор от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -103,7 +118,10 @@
               </div>
               <div class="presents-card-info__title">
                 Подарочный набор
-                от «Белого Медведя»
+                от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -124,7 +142,10 @@
                 За 1 место
               </div>
               <div class="presents-card-info__title">
-                ПОЛЕТ В АЭРОТРУБЕ ДЛЯ ДВОИХ + подарочный набор от «Белого Медведя»
+                ПОЛЕТ В АЭРОТРУБЕ ДЛЯ ДВОИХ + подарочный набор от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -138,7 +159,10 @@
                 За 2 место
               </div>
               <div class="presents-card-info__title">
-                ПОЛЕТ НА МОТОДЕЛЬТАПЛАНЕ + подарочный набор от «Белого Медведя»
+                ПОЛЕТ НА МОТОДЕЛЬТАПЛАНЕ + подарочный набор от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -153,7 +177,10 @@
               </div>
               <div class="presents-card-info__title">
                 Подарочный набор
-                от «Белого Медведя»
+                от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -175,7 +202,10 @@
               </div>
               <div class="presents-card-info__title">
                 КОНТУРНАЯ ТАТУ + подарочный
-                набор от «Белого Медведя»
+                набор от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -189,7 +219,10 @@
                 За 2 место
               </div>
               <div class="presents-card-info__title">
-                КАТАНИЕ НА КВАДРОЦИКЛАХ + подарочный набор от «Белого Медведя»
+                КАТАНИЕ НА КВАДРОЦИКЛАХ + подарочный набор от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -204,7 +237,10 @@
               </div>
               <div class="presents-card-info__title">
                 Подарочный набор
-                от «Белого Медведя»
+                от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -225,7 +261,10 @@
                 За 1 место
               </div>
               <div class="presents-card-info__title">
-                ПРОБНОЕ ПОГРУЖЕНИЕ ПОД ВОДУ + подарочный набор от «Белого Медведя»
+                ПРОБНОЕ ПОГРУЖЕНИЕ ПОД ВОДУ + подарочный набор от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -240,7 +279,10 @@
               </div>
               <div class="presents-card-info__title">
                 УРОКИ ИГРЫ НА БАРАБАНАХ +
-                подарочный набор от «Белого Медведя»
+                подарочный набор от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -255,7 +297,10 @@
               </div>
               <div class="presents-card-info__title">
                 Подарочный набор
-                от «Белого Медведя»
+                от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -278,7 +323,10 @@
               <div class="presents-card-info__title">
                 ИНДИВИДУАЛЬНЫЙ КУРС
                 ПО ФОТОГРАФИИ + подарочный
-                набор от «Белого Медведя»
+                набор от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -293,7 +341,10 @@
               </div>
               <div class="presents-card-info__title">
                 КАРТИНГ ПО ДВУХЭТАЖНОЙ ТРАССЕ +
-                подарочный набор от «Белого Медведя»
+                подарочный набор от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
@@ -308,7 +359,10 @@
               </div>
               <div class="presents-card-info__title">
                 Подарочный набор
-                от «Белого Медведя»
+                от «Белого Медведя»:
+                <span>
+                  сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                </span>
               </div>
             </div>
           </div>
