--- a/public/popups/popup-presents.html
+++ b/public/popups/popup-presents.html
@@ -14,7 +14,7 @@
         <div class="presents-cards-col">
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-1.png" alt="present">
+              <img src="./images/sertificat.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -32,7 +32,7 @@
 
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-2.png" alt="present">
+              <img src="./images/sertificat.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -50,7 +50,7 @@
 
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-1.png" alt="present">
+              <img src="./images/podarok.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -75,7 +75,7 @@
         <div class="presents-cards-col">
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-1.png" alt="present">
+              <img src="./images/sertificat.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -92,7 +92,7 @@
 
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-2.png" alt="present">
+              <img src="./images/sertificat.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -110,7 +110,7 @@
 
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-1.png" alt="present">
+              <img src="./images/podarok.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -135,7 +135,7 @@
         <div class="presents-cards-col">
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-1.png" alt="present">
+              <img src="./images/sertificat.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -152,7 +152,7 @@
 
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-2.png" alt="present">
+              <img src="./images/sertificat.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -169,7 +169,7 @@
 
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-1.png" alt="present">
+              <img src="./images/podarok.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -194,7 +194,7 @@
         <div class="presents-cards-col">
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-1.png" alt="present">
+              <img src="./images/sertificat.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -212,7 +212,7 @@
 
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-2.png" alt="present">
+              <img src="./images/sertificat.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -229,7 +229,7 @@
 
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-1.png" alt="present">
+              <img src="./images/podarok.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -254,7 +254,7 @@
         <div class="presents-cards-col">
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-1.png" alt="present">
+              <img src="./images/sertificat.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -271,7 +271,7 @@
 
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-2.png" alt="present">
+              <img src="./images/sertificat.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -289,7 +289,7 @@
 
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-1.png" alt="present">
+              <img src="./images/podarok.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -314,7 +314,7 @@
         <div class="presents-cards-col">
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-1.png" alt="present">
+              <img src="./images/sertificat.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -333,7 +333,7 @@
 
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-2.png" alt="present">
+              <img src="./images/sertificat.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
@@ -351,7 +351,7 @@
 
           <div class="presents-card">
             <div class="presents-card-image">
-              <img src="./images/present-1.png" alt="present">
+              <img src="./images/podarok.svg" alt="present">
             </div>
             <div class="presents-card-info">
               <div class="presents-card-info__rating">
