--- a/src/about.html
+++ b/src/about.html
@@ -85,7 +85,7 @@
   <div id="screens" class="screens main non-scroll">
 
     <!-- header start -->
-    <header class="screen screen-header">
+    <header class="screen screen-header about">
       <div class="container">
         <div class="header-flex">
           <div class="header-logo">
@@ -97,7 +97,6 @@
             <button class="burger-btn">
               <span></span>
             </button>
-            <img src="./images/gold.png" alt="ticket" class="ticket mfp-link" data-href="./popups/popup-more.html">
             <ul>
               <li>
                 <a href="#">Главная</a>
@@ -114,104 +113,6 @@
       </div>
     </header>
     <!-- header end -->
-
-    <!-- main screen start -->
-    <div class="screen screen-promo about">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-5 col-sm-6 col-xs-12">
-            <div class="screen-promo-left">
-              <div class="promo-text">
-                <div class="h3 promo-text-title about">
-                  Порой, чтобы открыть новые возможности, нужно посмотреть на привычное свежим взглядом. Оправиться
-                  вместе исследовать неизведанные маршруты, почувствовать дух приключений
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="bottle-wrapper about">
-        <div class="row">
-          <div class="col-md-10 col-sm-7 col-xs-12">
-            <img src="./images/bottle.png" srcset="./images/bottle@2x.png 2x" alt="bottle">
-          </div>
-        </div>
-      </div>
-
-      <img src="./images/gold.png" alt="ticket" class="ticket mfp-link" data-href="./popups/popup-more.html">
-      <img src="./images/slogan.png" alt="slogan" class="screen-slogan">
-      <!-- <img src="./images/gold.png" alt="ticket" class="screen-ticket"> -->
-
-
-      <img src="./images/top-screen-bg.jpg" class="screen-promo-bg" alt="bg">
-
-      <img src="./images/alert.svg" alt="alert" class="screen-alert">
-      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
-    </div>
-    <!-- main screen end -->
-
-
-    <!-- goals screen start -->
-    <div class="screen screen-goals">
-      <!-- <div class="bottle-wrapper about">
-        <div class="row">
-          <div class="col-md-10 col-sm-7 col-xs-12">
-            <img src="./images/bottles.png" srcset="./images/bottles@2x.png 2x" alt="bottle">
-          </div>
-        </div>
-      </div> -->
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 col-sm-4 bottles">
-            <img src="./images/bottles.png" srcset="./images/bottles@2x.png 2x" alt="bottle">
-          </div>
-          <div class="col-md-8 flex valign-center ">
-            <div class="goals-text">
-              Узнавать друг друга, находить общее, плечом к плечу проходить вместе любые испытания. Создавать тысячи
-              поводов для новых встреч, увлекаться самыми захватывающими историями, наполнять общение искренностью и
-              эмоциями.
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <img src="./images/alert.svg" alt="alert" class="screen-alert">
-      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
-    </div>
-    <!-- goals screen end -->
-
-    <!-- motto screen start -->
-    <div class="screen screen-motto">
-      <div class="container">
-        <div class="row screen-motto-text">
-          <!-- <div class="col-md-7">
-            <img src="./images/medved.png" srcset="./images/medved@2x.png 2x" alt="bottle">
-          </div> -->
-          <div class="col-md-5 col-sm-6 col-xs-12 flex valign-center ">
-            <div class="motto-text">
-              Исследуй мир
-              и создавай новое
-              вместе с брендом
-              <span>«Белый Медведь»!</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="screen-motto-wrapper">
-        <div class="row">
-          <div class="col-md-7">
-            <img src="./images/medved.png" srcset="./images/medved@2x.png 2x" alt="bottle">
-          </div>
-        </div>
-      </div>
-
-      <img src="./images/alert.svg" alt="alert" class="screen-alert">
-      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
-    </div>
-    <!-- motto screen end -->
-
 
     <!-- slider screen start -->
     <div class="screen screen-slider orange">
@@ -382,18 +283,104 @@
 
     <!-- slider screen End -->
 
-    <!-- <footer class="screen footer">
+    <!-- main screen start -->
+    <div class="screen screen-promo about">
       <div class="container">
-        <div class="flex">
-          <div class="footer-logo">
-            <img src="./images/logo-main.png" alt="logo">
-          </div>
-          <div class="footer-signature">
-            ©2023, ИООО «ЭфесТрэйд БиУай», УНП 190980621
+        <div class="row">
+          <div class="col-md-5 col-sm-6 col-xs-12">
+            <div class="screen-promo-left">
+              <div class="promo-text">
+                <div class="h3 promo-text-title about">
+                  Порой, чтобы открыть новые возможности, нужно посмотреть на привычное свежим взглядом. Оправиться
+                  вместе исследовать неизведанные маршруты, почувствовать дух приключений
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </footer> -->
+
+      <div class="bottle-wrapper about">
+        <div class="row">
+          <div class="col-md-10 col-sm-7 col-xs-12">
+            <img src="./images/bottle.png" srcset="./images/bottle@2x.png 2x" alt="bottle">
+          </div>
+        </div>
+      </div>
+
+      <img src="./images/gold.png" alt="ticket" class="ticket mfp-link" data-href="./popups/popup-more.html">
+      <img src="./images/slogan.png" alt="slogan" class="screen-slogan">
+      <!-- <img src="./images/gold.png" alt="ticket" class="screen-ticket"> -->
+
+
+      <img src="./images/top-screen-bg.jpg" class="screen-promo-bg" alt="bg">
+
+      <img src="./images/alert.svg" alt="alert" class="screen-alert">
+      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
+    </div>
+    <!-- main screen end -->
+
+
+    <!-- goals screen start -->
+    <div class="screen screen-goals">
+      <!-- <div class="bottle-wrapper about">
+        <div class="row">
+          <div class="col-md-10 col-sm-7 col-xs-12">
+            <img src="./images/bottles.png" srcset="./images/bottles@2x.png 2x" alt="bottle">
+          </div>
+        </div>
+      </div> -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-sm-4 bottles">
+            <img src="./images/bottles.png" srcset="./images/bottles@2x.png 2x" alt="bottle">
+          </div>
+          <div class="col-md-8 flex valign-center ">
+            <div class="goals-text">
+              Узнавать друг друга, находить общее, плечом к плечу проходить вместе любые испытания. Создавать тысячи
+              поводов для новых встреч, увлекаться самыми захватывающими историями, наполнять общение искренностью и
+              эмоциями.
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <img src="./images/alert.svg" alt="alert" class="screen-alert">
+      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
+    </div>
+    <!-- goals screen end -->
+
+    <!-- motto screen start -->
+    <div class="screen screen-motto">
+      <div class="container">
+        <div class="row screen-motto-text">
+          <!-- <div class="col-md-7">
+            <img src="./images/medved.png" srcset="./images/medved@2x.png 2x" alt="bottle">
+          </div> -->
+          <div class="col-md-5 col-sm-6 col-xs-12 flex valign-center ">
+            <div class="motto-text">
+              Исследуй мир
+              и создавай новое
+              вместе с брендом
+              <span>«Белый Медведь»!</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="screen-motto-wrapper">
+        <div class="row">
+          <div class="col-md-7">
+            <img src="./images/medved.png" srcset="./images/medved@2x.png 2x" alt="bottle">
+          </div>
+        </div>
+      </div>
+
+      <img src="./images/alert.svg" alt="alert" class="screen-alert">
+      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
+    </div>
+    <!-- motto screen end -->
+
+
     <footer class="footer screen screen-footer">
       <div class="container">
         <div class="flex">
