--- a/public/pages.html
+++ b/public/pages.html
@@ -6,4 +6,7 @@
   <li>
     <a href="contest.html">Страница конкурса</a>
   </li>
+  <li>
+    <a href="about.html">Страница конкурса</a>
+  </li>
 </ul>
