--- a/src/about.html
+++ b/src/about.html
@@ -248,7 +248,7 @@
             </div>
 
           </div>
-          <div class="slider-right">
+          <div class="slider-right about">
             <div class="slider-bgs">
               <div class="slider-item-bg first yellow">
               </div>
@@ -302,40 +302,33 @@
 
       <div class="bottle-wrapper about">
         <div class="row">
-          <div class="col-md-10 col-sm-7 col-xs-12">
-            <img src="./images/bottle.png" srcset="./images/bottle@2x.png 2x" alt="bottle">
+          <div class=" col-lg-10 col-md-11 col-sm-7 col-xs-12">
+            <img src="./images/island.png" srcset="./images/island@2x.png 2x" alt="island">
           </div>
         </div>
       </div>
 
       <img src="./images/gold.png" alt="ticket" class="ticket mfp-link" data-href="./popups/popup-more.html">
       <img src="./images/slogan.png" alt="slogan" class="screen-slogan">
-      <!-- <img src="./images/gold.png" alt="ticket" class="screen-ticket"> -->
-
-
-      <img src="./images/top-screen-bg.jpg" class="screen-promo-bg" alt="bg">
 
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
-      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
+      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile about">
     </div>
     <!-- main screen end -->
 
 
     <!-- goals screen start -->
     <div class="screen screen-goals">
-      <!-- <div class="bottle-wrapper about">
+      <div class="camping-wrapper">
         <div class="row">
-          <div class="col-md-10 col-sm-7 col-xs-12">
-            <img src="./images/bottles.png" srcset="./images/bottles@2x.png 2x" alt="bottle">
+          <div class="col-md-5 col-sm-4">
+            <img src="./images/camping.png" srcset="./images/camping@2x.png 2x" alt="camping">
           </div>
         </div>
-      </div> -->
-      <div class="container">
+      </div>
+      <div class="container goals">
         <div class="row">
-          <div class="col-md-4 col-sm-4 bottles">
-            <img src="./images/bottles.png" srcset="./images/bottles@2x.png 2x" alt="bottle">
-          </div>
-          <div class="col-md-8 flex valign-center ">
+          <div class="col-md-8 col-sm-8 flex valign-center text-wrapper">
             <div class="goals-text">
               Узнавать друг друга, находить общее, плечом к плечу проходить вместе любые испытания. Создавать тысячи
               поводов для новых встреч, увлекаться самыми захватывающими историями, наполнять общение искренностью и
@@ -346,7 +339,7 @@
       </div>
 
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
-      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
+      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile about">
     </div>
     <!-- goals screen end -->
 
@@ -370,13 +363,14 @@
       <div class="screen-motto-wrapper">
         <div class="row">
           <div class="col-md-7">
-            <img src="./images/medved.png" srcset="./images/medved@2x.png 2x" alt="bottle">
+            <img src="./images/medved.png" srcset="./images/medved@2x.png 2x" alt="bottle" class="desktop">
+            <img src="./images/medved-mobile.png" srcset="./images/medved-mobile@2x.png 2x" alt="bottle" class="mobile">
           </div>
         </div>
       </div>
 
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
-      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
+      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile about">
     </div>
     <!-- motto screen end -->
 
