--- a/src/contest.html
+++ b/src/contest.html
@@ -193,16 +193,18 @@
                 </div>
                 <div class="card-item-images">
                   <div class="card-item-images__image">
-                    <img src="./images/present-1.png" alt="present">
+                    <img src="./images/present-1-8f869c1e.svg" alt="present" class="first">
                   </div>
                   <div class="card-item-images__image">
-                    <img src="./images/present-2.png" alt="present">
+                    <img src="./images/present-2-24cac9ca.svg" alt="present" class="second">
                   </div>
                   <div class="card-item-images__image">
-                    <img src="./images/present-3.png" alt="present">
+                    <img src="./images/present-3-055e8ac8.svg" alt="present">
                   </div>
                   <div class="card-item-images__image mfp-link" data-href="./popups/popup-presents.html">
-                    <span>+15</span>
+                    <div>
+                      <span>ЕЩЁ</span>
+                    </div>
                   </div>
                 </div>
               </div>
