--- a/src/index.html
+++ b/src/index.html
@@ -371,10 +371,11 @@
         </div>
       </div>
 
-      <div class="benefits-slogan">
+      <!-- <div class="benefits-slogan">
         <img src="./images/gold.png" alt="ticket" class="ticket mfp-link" data-href="./popups/popup-more.html">
-      </div>
+      </div> -->
 
+      <img src="./images/gold.png" alt="ticket" class="ticket mfp-link" data-href="./popups/popup-more.html">
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
       <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
     </div>
