--- a/src/contest.html
+++ b/src/contest.html
@@ -377,10 +377,7 @@
                   </div>
                 </div>
                 <div class="screen-plans-item__text">
-                  Немного текста истории пользователя о том какой у него план на это лето и много чего еще и превью в 3
-                  строчки. Немного текста истории пользователя о том какой у него план на это лето и много чего еще и
-                  превью в 3
-                  строчки
+                  Немного текста истории пользователя
                 </div>
                 <a class="screen-plans-item__more mfp-link" href="javascript:void(0)"
                   data-href="./popups/popup-plane.html">
