--- a/public/contest.html
+++ b/public/contest.html
@@ -594,8 +594,35 @@
               <a class="pagination-btn" href="javascript:void(0)">
                 3
               </a>
+              <a class="pagination-btn" href="javascript:void(0)">
+                4
+              </a>
+              <a class="pagination-btn active" href="javascript:void(0)">
+                5
+              </a>
+              <a class="pagination-btn" href="javascript:void(0)">
+                6
+              </a>
+              <a class="pagination-btn" href="javascript:void(0)">
+                7
+              </a>
+              <a class="pagination-btn active" href="javascript:void(0)">
+                8
+              </a>
+              <a class="pagination-btn" href="javascript:void(0)">
+                9
+              </a>
+              <a class="pagination-btn" href="javascript:void(0)">
+                10
+              </a>
+              <a class="pagination-btn active" href="javascript:void(0)">
+                11
+              </a>
+              <a class="pagination-btn" href="javascript:void(0)">
+                12
+              </a>
               <span class="pagination-dots">...</span>
-              <a class="pagination-btn" href="javascript:void(0)">12</a>
+              <!-- <a class="pagination-btn" href="javascript:void(0)">12</a> -->
             </div>
             <div class="screen-plans-pagination__create">
               <button class="ui-btn">
@@ -625,6 +652,151 @@
         </div>
 
       </div>
+      <img src="./images/alert.svg" alt="alert" class="screen-alert">
+      <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
+    </div>
+
+
+    <div class="screen screen-winners">
+      <div class="container">
+        <div class="screen-winners-head">
+          <div class="h3 screen-winners-title">
+            Победители конкурса
+          </div>
+
+          <div class="screen-winners-tabs">
+            <a href="javascript:void(0)" class="tab">Этап 1</a>
+            <a href="javascript:void(0)" class="tab active">Этап 2</a>
+            <a href="javascript:void(0)" class="tab disabled">Этап 3</a>
+            <a href="javascript:void(0)" class="tab disabled">Этап 4</a>
+            <a href="javascript:void(0)" class="tab disabled">Этап 5</a>
+            <a href="javascript:void(0)" class="tab disabled">Этап 6</a>
+          </div>
+
+        </div>
+        <div class="screen-winners-cards">
+
+          <div class="screen-winners-item">
+            <div class="screen-winners-item__place">
+              1 место
+            </div>
+            <div class="screen-winners-item__head">
+              <div class="screen-winners-item__image">
+                <img src="./images/avatar.png" alt="avatar">
+              </div>
+              <div class="screen-winners-item__title">
+                РОМАНОВ НИКИТА Никитосович никитовичевский
+              </div>
+              <div class="screen-winners-item__count">
+                #56
+              </div>
+            </div>
+            <div class="screen-winners-item__text">
+              Я хотел бы организовать пеший поход до крупнейшего места концентрации славянской силы - о. Байкал
+            </div>
+            <div class="screen-winners-item__present">
+              <div class="title">
+                Выигрыш победителя:
+              </div>
+              <div class="description">
+                <div class="description-image">
+                  <img src="./images/sertificat.svg" alt="present">
+                </div>
+                <div class="description-info">
+                  ПРОГУЛКА НА ЯХТЕ + подарочный набор
+                  от «Белого Медведя»:
+                  <span>
+                    сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="screen-winners-item">
+            <div class="screen-winners-item__place">
+              2 место
+            </div>
+            <div class="screen-winners-item__head">
+              <div class="screen-winners-item__image">
+                <img src="./images/avatar.png" alt="avatar">
+              </div>
+              <div class="screen-winners-item__title">
+                ДУДАРЕВ ПАВЕЛ
+              </div>
+              <div class="screen-winners-item__count">
+                #74
+              </div>
+            </div>
+            <div class="screen-winners-item__text">
+              Хотелось бы найти время, побывать в различных неведомых местах нашей планеты, собираться с друзьями и
+              ехать далеко в путилествия, и в будущем принести в нашу страну что то особенное для народа.
+            </div>
+            <div class="screen-winners-item__present">
+              <div class="title">
+                Выигрыш победителя:
+              </div>
+              <div class="description">
+                <div class="description-image">
+                  <img src="./images/sertificat.svg" alt="present">
+                </div>
+                <div class="description-info">
+                  СПЛАВ НА БАЙДАРКАХ + подарочный набор
+                  от «Белого Медведя»:
+                  <span>
+                    сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="screen-winners-item">
+            <div class="screen-winners-item__place">
+              3 место
+            </div>
+            <div class="screen-winners-item__head">
+              <div class="screen-winners-item__image">
+                <img src="./images/avatar.png" alt="avatar">
+              </div>
+              <div class="screen-winners-item__title">
+                СУШКЕВИЧ СЕРГЕЙ
+              </div>
+              <div class="screen-winners-item__count">
+                #53
+              </div>
+            </div>
+            <div class="screen-winners-item__text">
+              Как поклонник F1 я предпочитаю скорость. Конечно, достичь скорость в 300+ км/ч на городских дорогах, где
+              установлен лимит в 60 км/ч невозможно (и незаконно), но всегда можно попробовать гоночный драйв на
+              картинге, где вы один на один с трассой, болидом и резкой стартовой скоростью. Чувство адреналина уже в
+              крови, не так ли?)
+              Как поклонник F1 я предпочитаю скорость. Конечно, достичь скорость в 300+ км/ч на городских дорогах, где
+              установлен лимит в 60 км/ч невозможно (и незаконно), но всегда можно попробовать гоночный драйв на
+              картинге, где вы один на один с трассой, болидом и резкой стартовой скоростью. Чувство адреналина уже в
+              крови, не так ли?)
+            </div>
+            <div class="screen-winners-item__present">
+              <div class="title">
+                Выигрыш победителя:
+              </div>
+              <div class="description">
+                <div class="description-image">
+                  <img src="./images/podarok.svg" alt="present">
+                </div>
+                <div class="description-info">
+                  Подарочный набор от «Белого Медведя»:
+                  <span>
+                    сумка-шоппер, 2 бокала для пива, открывашка, шапка-докер.
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
       <img src="./images/alert.svg" alt="alert" class="screen-alert">
       <img src="./images/alert-mobile.svg" alt="alert" class="screen-alert mobile">
     </div>
